<resources>
    <string name="app_name">IAmHere</string>
    <string name="server_address_localhost">http://192.168.43.249:8080</string>
    <string name="login_button">Login</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_no_internet_message">Internet access required</string>
    <string name="login_failed">Wrong email or password</string>
    <string name="empty_fields">All fields are mandatory</string>
    <string name="login_wrong_url">Can not connect to server</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_questions">Questions</string>
    <string name="menu_settings">Settings</string>
    <string name="schedule_title">Scheduled activities</string>
    <string name="present_schedule_title">Running activities</string>
    <string name="evaluations_title">Running testes</string>
    <string name="attendance_accept">I am here</string>
    <string name="attendance_remove">Delete attendance</string>
    <string name="attendance_report"><u>Attendance report</u></string>
    <string name="evaluations_report"><u>Grades</u></string>
    <string name="no_beacon">This professor does not have a beacon</string>
    <string name="no_ble">No BLE device</string>
    <string name="bluetooth">Bluetooth required</string>
    <string name="wrong_beacon">Wrong beacon</string>
    <string name="schedule_symbol">📅</string>
    <string name="check_symbol">✅</string>
    <string name="arrow_symbol">►</string>
    <string name="attendance_accepted">Done</string>
    <string name="attendance_removed">Deleted</string>
    <string name="report_attendance">Attendance list</string>
    <string name="report_grades">Grades report</string>
    <string name="report_attendance_in">Attendance for week: </string>
    <string name="evaluation_response">Send answer</string>
    <string name="no_attendance">No attendance</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="changes">Changed password</string>
    <string name="no_changes">Wrong old password</string>
    <string name="server_error">Server Error</string>
</resources>
