<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="0dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.claudia.iamhere.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText"
            android:textColorHint="@drawable/hint" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:textColorHint="@drawable/hint" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/login_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"/>

    </LinearLayout>

</RelativeLayout>
