<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp"
    tools:context="com.example.claudia.iamhere.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:maxWidth="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:text="@string/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/settings_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>
